# obsweatherscale

./: .buildinfo  .gitignore  .mch-ci.yml  CHANGELOG.rst  Jenkinsfile  LICENSE  README.rst  changelog.html  genindex.html  history.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  sonar-project.properties  usage.html
.doctrees/: changelog.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: CI_publish.yaml  CI_test.yaml  docs_publish.yaml
_modules/: index.html
_modules/obsweatherscale/: logger.html  sampling.html
_sources/: index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/obsweatherscale/: index.html
doc/: acknowledgements.rst  citation.rst  conf.py  development.rst  documentation.rst  index.rst  installation.rst  license.rst  readme.rst  split_readme.py  usage.rst
examples/: example_create_target.py  example_data_processing.py  example_inference_script.py  example_script.py  example_train_script.py
obsweatherscale/: __init__.py  constants.py  logger.py  sampling.py
obsweatherscale/data/: dataset.py
obsweatherscale/data_io/: __init__.py  xarray_utils.py  zarr_utils.py
obsweatherscale/inference/: __init__.py  predict_distribution.py  sample.py
obsweatherscale/kernels/: __init__.py  neural_kernel.py  scaled_rbf_kernel.py
obsweatherscale/likelihoods/: __init__.py  noise_models.py  transformed_likelihood.py
obsweatherscale/means/: __init__.py  neural_mean.py
obsweatherscale/models/: __init__.py  exact_prediction_strategies.py  gp_model.py  mlp.py
obsweatherscale/training/: __init__.py  loggers.py  loss_functions.py  losses.py  trainer.py  training.py
obsweatherscale/transformations/: __init__.py  (+3 more)
scripts/: setup_poetry.sh
test/: conftest.py  test_dummy_library.py  test_kernels.py  test_loggers.py  test_loss_functions.py  test_means.py  test_models.py  test_transformations.py
(+111 files in other folders)
